# BoardFlowBench

./: AGENTS.md  AI_CONTRACT.md  AgentManager_bridge_refined.pptx  PROJECT_BOARD.md  README.md  RepoFlow.pptx  pyproject.toml  requirements.txt  ~$RepoFlow.pptx
.board/: handoff.schema.json  tasks.yaml
.repo_manager/: agent_context.md  repo_style_profile.json  smell_rules.json  style_record.md
demo_repo_template/: README.md  pyproject.toml
demo_repo_template/tests/: test_report.py  test_summary.py  test_validator.py
docs/: B001_ONLY_LOW_VARIANCE_PROMPT_RESULT_20260604_115832.md  CLASSROOM_COMPARISON_DEMO_STARTER.md  CLASSROOM_DEMO_RUN_20260604_002324.md  CLEAN_RESTART_B001_B002_FAILURE_REPORT.md  DESIGN.md  EXPERIMENT_PROTOCOL.md  HUMAN_REALISTIC_PROMPT_EXPERIMENT.md  RAW_AGENTMD_PROMPT_EXPERIMENT_20260604_113222.md  RESEARCH_PLAN.md  RUN_TASK_001.md  RUN_TASK_B001.md  TONIGHT_B001_DEMO_WORKFLOW.md  rawagent_prompt_filetree_comparison_slide.pptx  中文说明与扩展指南.md
install/: install_all.sh  install_claude.sh  install_codex.sh  install_opencode.sh
repo_guardian_studio/: README.md  app.py  requirements.txt
repo_manager_core/: __init__.py  bootstrap.py  default_handoff.schema.json  search_rules.py  smell_learning.py
repo_manager_report/: code_health_report.md  repo_profile.json  smell_report.json  style_profile.json
scripts/: activate_benchmark_task.py  aggregate_benchmark_results.py  bootstrap_repo.py  finalize_benchmark_task.py  init_benchmark_workspace.py  run_scenario.py  run_score.py  validate_benchmark_seed.py
template/: README.md
tests/: conftest.py  (+23 more)
(+187 files in other folders)
